Made adjustments